# exploring-bosonic-qiskit-qec

./: .gitignore  README.md  pyproject.toml
c2qa/: LICENSE
src/: bosonic_error_correction.ipynb  bosonic_qiskit_introduction.ipynb  testing bosonic qiskit.ipynb  testing bosonic qiskit.py
